--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,22 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
+
+*.cof
+*.err
+*.esym
+*.lst
+*.STA
+*.sym
+*.esym
+*.xsym
+*.~*
+*.tre
+*.hex
+*.cod
+*.tre
+*.tre
+*.hex
+*.pdsbak
+*.workspace
+*.ccspjt
